# ai-blame

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION-SUMMARY.md  MIGRATION.md  PLAN-BLOCK-LEVEL-BLAME.md  PLAN-UI.md  PLAN-WORKFLOW-INTEGRATION.md  PROBLEM-STATEMENT-ANSWER.md  PYTHON-DISTRIBUTION-STRATEGY.md  PYTHON-PACKAGING-QUICKREF.md  README.md  UI-IMPROVEMENTS.md  UI-REVIEW-SUMMARY.md  UI-STATUS-REPORT.md  demo-record.sh  demo.cast  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test-python-build.sh
.claude/skills/: ask.md
.github/: ai-controllers.json
.github/workflows/: deploy-docs.yml  main.yaml  pypi-publish.yaml  python-wheels.yml  rust.yml  tauri-release.yml
about/: index.html
docs/: about.md  faqs.md  index.md  requirements.txt  tauri-review.md
docs/explanation/: claude-traces.md  codex-traces.md  how-it-works.md  philosophy.md  related-tools.md  trace-format.md  transcripts-and-subagents.md
docs/how-to/: column-layouts.md  configuration.md  file-types.md  performance-and-caching.md  shell-completions.md  tauri-app.md  test-data.md
docs/reference/: annotation.md  (+8 more)
faqs/: index.html
reference/: index.html
search/: search_index.json
src/: cli.rs  extractor.rs  git_batch.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
tauri-review/: index.html
tests/: blame_test.rs  cache_test.rs  cli_commands_test.rs  config_test.rs  extractor_test.rs  mixed_traces_test.rs  models_test.rs  paths_test.rs  test_cli.py  trace_fixtures_test.rs
ui/: TODO.md  app.js  index.html  styles.css
(+51 files in other folders)
