[package]
name = "ai-blame"
version = "0.1.0"
edition = "2021"
authors = ["Chris Mungall"]
description = "Extract provenance from AI agent execution traces - Rust port of ai-blame"
license = "BSD-3-Clause"

[workspace]
members = [
    ".",
    "src-tauri"
]
default-members = [
    "."
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Mungall"]
license = "BSD-3-Clause"

[lib]
name = "ai_blame"
path = "src/lib.rs"

[[bin]]
name = "ai-blame"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
glob = "0.3"
regex = "1.11"
dirs = "5.0"
duckdb = { version = "1.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14"
